OC3 = OpenCart 3
PS  = PrestaShop
VM3 = VirtueMart3 (Joomla)
WC  = WooCommerce (WordPress) (alle ondersteunde versies, vanaf 5.5.2 is dat alleen nog WC3)
WC2 = WooCommerce 2 (WordPress)
WC3 = WooCommerce 3+ (WordPress)

5.9.0 (2020-04-??)
------------------
Features:
- ALL: Added an option to show or hide the status invoice screen and options to
  show or hide the pdf links on that status invoice screen.
- MA2: Added a message to ask to rate our module on Magento marketplace.
- MA2: Added an Acumulus tab to the view order page, showing the status of the
  invoice for that order and its credit notes, if any, in Acumulus.
- WC: Message asking to rate our plugin is now also shown on our own pages.

Bugs:
- WC3: WC introduced new 'hidden' order item meta keys ('method_id', 'cost',
  '_reduced_stock') that are not variant info.
- ALL: Using order date to send as invoice date did not work correctly.
- MA (and others?): ModuleTranslations were not loaded: refactored to be loaded
  automatically after loading any ModuleSpecificTranslations.

Refactorings:
- ALL: Added method ShopCapabilities::hasInvoiceStatusScreen().
- MA2: Refactored inheritance structure of controller classes.
- MA2: Refactored naming of full page block classes.
- MA: Refactored the FormMapper to allow for the new (in Magento) Invoice status
  overview form to be rendered as required.
- MA2|WC: Changed labels on the Acumulus invoice status overview page, as it has
  much more space than in WooCommerce. For Woocommerce these labels are now
  overridden to remain short.
- ALL: Tightened Source creation to cover for non validated input.
- WC: Refactored ajax handling to make it usable in other shops as well.
- ALL: Move class Siel\Acumulus\WooCommerce\Shop\InvoiceStatusOverviewForm (and
  Siel\Acumulus\WooCommerce\Shop\InvoiceStatusOverviewFormTranslations) to
  Siel\Acumulus\Shop\InvoiceStatusForm (resp.
  Siel\Acumulus\Shop\InvoiceStatusFormTranslations).